# wastrs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.html
pkg/: README.md  package.json  wastrs.d.ts  wastrs.js  wastrs_bg.wasm  wastrs_bg.wasm.d.ts
src/: lib.rs
